syntax = "proto3";

option java_package="com.grpc.ssl";

message GreetRequest{
       string firstName = 1;
       string lastName = 2;
}


message GreetResponse{
        string greeting =1;
}



service GreetService{

rpc greetUser(GreetRequest) returns (GreetResponse);

}